Grammar/.antlr/patitoParser.java
// Generated from /Users/amionej/Documents/Tec/8semestre/compis/CoCa-Compiler/Grammar/patito.g4 by ANTLR 4.7.1

  from Compiler.compiler import *
  from Compiler.function import *
  from Compiler.variable import *
  from Compiler.interpreter import *
  interpreter = Interpreter()
  compiler = Compiler()

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class patitoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, LINE_COMMENT=2, WS=3, LESS=4, GREATER=5, LESS_EQUAL=6, GREATER_EQUAL=7, 
		EQUAL=8, NOT_EQUAL=9, ASSIGN=10, AND=11, OR=12, ADD=13, SUB=14, MULT=15, 
		DIV=16, LEFT_PARENTHESIS=17, RIGHT_PARENTHESIS=18, LEFT_BRACKET=19, RIGHT_BRACKET=20, 
		LEFT_CURLY=21, RIGHT_CURLY=22, DETERMINANT=23, TRANSPOSE=24, INVERSE=25, 
		COMMA=26, COLON=27, SEMICOLON=28, PROGRAM=29, MAIN=30, FUNCTION=31, RETURN=32, 
		INPUT=33, PRINT=34, IF=35, THEN=36, ELSE=37, WHILE=38, DO=39, FROM=40, 
		TO=41, VAR=42, BOOL=43, INT=44, FLOAT=45, STRING=46, CHAR=47, CTE_BOOL=48, 
		CTE_FLOAT=49, CTE_INT=50, CTE_CHAR=51, CTE_STRING=52, VOID=53, ID=54;
	public static final int
		RULE_program = 0, RULE_declarevars = 1, RULE_variables = 2, RULE_vartypes = 3, 
		RULE_constant = 4, RULE_varindividual = 5, RULE_functions = 6, RULE_function = 7, 
		RULE_functiontype = 8, RULE_parameters = 9, RULE_hexp = 10, RULE_mexp = 11, 
		RULE_sexp = 12, RULE_exp = 13, RULE_term = 14, RULE_factor = 15, RULE_statute = 16, 
		RULE_assignation = 17, RULE_voidcall = 18, RULE_returncall = 19, RULE_indexvariable = 20, 
		RULE_read = 21, RULE_write = 22, RULE_conditional = 23, RULE_whileloop = 24, 
		RULE_fromloop = 25, RULE_mainfunc = 26;
	public static final String[] ruleNames = {
		"program", "declarevars", "variables", "vartypes", "constant", "varindividual", 
		"functions", "function", "functiontype", "parameters", "hexp", "mexp", 
		"sexp", "exp", "term", "factor", "statute", "assignation", "voidcall", 
		"returncall", "indexvariable", "read", "write", "conditional", "whileloop", 
		"fromloop", "mainfunc"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
		"'='", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "'$'", "'\u00A1'", "'?'", "','", "':'", "';'", "'program'", 
		"'main'", "'function'", "'return'", "'input'", "'print'", "'if'", "'then'", 
		"'else'", "'while'", "'do'", "'from'", "'to'", "'var'", "'bool'", "'int'", 
		"'float'", "'string'", "'char'", null, null, null, null, null, "'void'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMENT", "LINE_COMMENT", "WS", "LESS", "GREATER", "LESS_EQUAL", 
		"GREATER_EQUAL", "EQUAL", "NOT_EQUAL", "ASSIGN", "AND", "OR", "ADD", "SUB", 
		"MULT", "DIV", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "LEFT_BRACKET", 
		"RIGHT_BRACKET", "LEFT_CURLY", "RIGHT_CURLY", "DETERMINANT", "TRANSPOSE", 
		"INVERSE", "COMMA", "COLON", "SEMICOLON", "PROGRAM", "MAIN", "FUNCTION", 
		"RETURN", "INPUT", "PRINT", "IF", "THEN", "ELSE", "WHILE", "DO", "FROM", 
		"TO", "VAR", "BOOL", "INT", "FLOAT", "STRING", "CHAR", "CTE_BOOL", "CTE_FLOAT", 
		"CTE_INT", "CTE_CHAR", "CTE_STRING", "VOID", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "patito.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public patitoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(patitoParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(patitoParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(patitoParser.SEMICOLON, 0); }
		public DeclarevarsContext declarevars() {
			return getRuleContext(DeclarevarsContext.class,0);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public MainfuncContext mainfunc() {
			return getRuleContext(MainfuncContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(PROGRAM);
			setState(55);
			match(ID);
			setState(56);
			match(SEMICOLON);
			setState(57);
			declarevars();
			setState(58);
			functions();
			setState(59);
			mainfunc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarevarsContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(patitoParser.VAR, 0); }
		public List<VariablesContext> variables() {
			return getRuleContexts(VariablesContext.class);
		}
		public VariablesContext variables(int i) {
			return getRuleContext(VariablesContext.class,i);
		}
		public DeclarevarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarevars; }
	}

	public final DeclarevarsContext declarevars() throws RecognitionException {
		DeclarevarsContext _localctx = new DeclarevarsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarevars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(VAR);
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				variables();
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << CHAR))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public VartypesContext vartypes() {
			return getRuleContext(VartypesContext.class,0);
		}
		public TerminalNode COLON() { return getToken(patitoParser.COLON, 0); }
		public List<VarindividualContext> varindividual() {
			return getRuleContexts(VarindividualContext.class);
		}
		public VarindividualContext varindividual(int i) {
			return getRuleContext(VarindividualContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(patitoParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(patitoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(patitoParser.COMMA, i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			vartypes();
			setState(68);
			match(COLON);
			setState(69);
			varindividual();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(70);
				match(COMMA);
				setState(71);
				varindividual();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypesContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(patitoParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(patitoParser.BOOL, 0); }
		public TerminalNode FLOAT() { return getToken(patitoParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(patitoParser.STRING, 0); }
		public TerminalNode CHAR() { return getToken(patitoParser.CHAR, 0); }
		public VartypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartypes; }
	}

	public final VartypesContext vartypes() throws RecognitionException {
		VartypesContext _localctx = new VartypesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vartypes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode CTE_BOOL() { return getToken(patitoParser.CTE_BOOL, 0); }
		public TerminalNode CTE_FLOAT() { return getToken(patitoParser.CTE_FLOAT, 0); }
		public TerminalNode CTE_INT() { return getToken(patitoParser.CTE_INT, 0); }
		public TerminalNode CTE_CHAR() { return getToken(patitoParser.CTE_CHAR, 0); }
		public TerminalNode CTE_STRING() { return getToken(patitoParser.CTE_STRING, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CTE_BOOL) | (1L << CTE_FLOAT) | (1L << CTE_INT) | (1L << CTE_CHAR) | (1L << CTE_STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarindividualContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(patitoParser.ID, 0); }
		public List<TerminalNode> LEFT_BRACKET() { return getTokens(patitoParser.LEFT_BRACKET); }
		public TerminalNode LEFT_BRACKET(int i) {
			return getToken(patitoParser.LEFT_BRACKET, i);
		}
		public List<TerminalNode> CTE_INT() { return getTokens(patitoParser.CTE_INT); }
		public TerminalNode CTE_INT(int i) {
			return getToken(patitoParser.CTE_INT, i);
		}
		public List<TerminalNode> RIGHT_BRACKET() { return getTokens(patitoParser.RIGHT_BRACKET); }
		public TerminalNode RIGHT_BRACKET(int i) {
			return getToken(patitoParser.RIGHT_BRACKET, i);
		}
		public VarindividualContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varindividual; }
	}

	public final VarindividualContext varindividual() throws RecognitionException {
		VarindividualContext _localctx = new VarindividualContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varindividual);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(ID);
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(84);
				match(LEFT_BRACKET);
				setState(85);
				match(CTE_INT);
				setState(86);
				match(RIGHT_BRACKET);
				}
				break;
			case 2:
				{
				setState(87);
				match(LEFT_BRACKET);
				setState(88);
				match(CTE_INT);
				setState(89);
				match(RIGHT_BRACKET);
				setState(90);
				match(LEFT_BRACKET);
				setState(91);
				match(CTE_INT);
				setState(92);
				match(RIGHT_BRACKET);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(95);
				function();
				}
				}
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FUNCTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctiontypeContext functiontype;
		public Token ID;
		public TerminalNode FUNCTION() { return getToken(patitoParser.FUNCTION, 0); }
		public FunctiontypeContext functiontype() {
			return getRuleContext(FunctiontypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(patitoParser.ID, 0); }
		public TerminalNode LEFT_PARENTHESIS() { return getToken(patitoParser.LEFT_PARENTHESIS, 0); }
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(patitoParser.RIGHT_PARENTHESIS, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(patitoParser.LEFT_CURLY, 0); }
		public TerminalNode RIGHT_CURLY() { return getToken(patitoParser.RIGHT_CURLY, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public DeclarevarsContext declarevars() {
			return getRuleContext(DeclarevarsContext.class,0);
		}
		public StatuteContext statute() {
			return getRuleContext(StatuteContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(FUNCTION);
			setState(101);
			((FunctionContext)_localctx).functiontype = functiontype();
			setState(102);
			((FunctionContext)_localctx).ID = match(ID);
			compiler.currentFunction=Function((((FunctionContext)_localctx).ID!=null?((FunctionContext)_localctx).ID.getText():null), (((FunctionContext)_localctx).functiontype!=null?_input.getText(((FunctionContext)_localctx).functiontype.start,((FunctionContext)_localctx).functiontype.stop):null), {}, {})
			setState(104);
			match(LEFT_PARENTHESIS);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << CHAR))) != 0)) {
				{
				setState(105);
				parameters();
				}
			}

			setState(108);
			match(RIGHT_PARENTHESIS);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(109);
				declarevars();
				}
			}

			setState(112);
			match(LEFT_CURLY);
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(113);
				statute();
				}
				break;
			}
			setState(116);
			match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctiontypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(patitoParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(patitoParser.BOOL, 0); }
		public TerminalNode FLOAT() { return getToken(patitoParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(patitoParser.STRING, 0); }
		public TerminalNode CHAR() { return getToken(patitoParser.CHAR, 0); }
		public TerminalNode VOID() { return getToken(patitoParser.VOID, 0); }
		public FunctiontypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functiontype; }
	}

	public final FunctiontypeContext functiontype() throws RecognitionException {
		FunctiontypeContext _localctx = new FunctiontypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functiontype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << CHAR) | (1L << VOID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public VartypesContext vartypes;
		public Token ID;
		public List<VartypesContext> vartypes() {
			return getRuleContexts(VartypesContext.class);
		}
		public VartypesContext vartypes(int i) {
			return getRuleContext(VartypesContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(patitoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(patitoParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(patitoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(patitoParser.COMMA, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			((ParametersContext)_localctx).vartypes = vartypes();
			setState(121);
			((ParametersContext)_localctx).ID = match(ID);
			compiler.currentFunction._update_parameters((((ParametersContext)_localctx).vartypes!=null?_input.getText(((ParametersContext)_localctx).vartypes.start,((ParametersContext)_localctx).vartypes.stop):null), (((ParametersContext)_localctx).ID!=null?((ParametersContext)_localctx).ID.getText():null))
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(123);
				match(COMMA);
				setState(124);
				((ParametersContext)_localctx).vartypes = vartypes();
				setState(125);
				((ParametersContext)_localctx).ID = match(ID);
				compiler.currentFunction._update_parameters((((ParametersContext)_localctx).vartypes!=null?_input.getText(((ParametersContext)_localctx).vartypes.start,((ParametersContext)_localctx).vartypes.stop):null), (((ParametersContext)_localctx).ID!=null?((ParametersContext)_localctx).ID.getText():null))
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HexpContext extends ParserRuleContext {
		public List<MexpContext> mexp() {
			return getRuleContexts(MexpContext.class);
		}
		public MexpContext mexp(int i) {
			return getRuleContext(MexpContext.class,i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(patitoParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(patitoParser.ASSIGN, i);
		}
		public HexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hexp; }
	}

	public final HexpContext hexp() throws RecognitionException {
		HexpContext _localctx = new HexpContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_hexp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			mexp();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ASSIGN) {
				{
				{
				setState(134);
				match(ASSIGN);
				setState(135);
				mexp();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MexpContext extends ParserRuleContext {
		public Token AND;
		public Token OR;
		public List<SexpContext> sexp() {
			return getRuleContexts(SexpContext.class);
		}
		public SexpContext sexp(int i) {
			return getRuleContext(SexpContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(patitoParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(patitoParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(patitoParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(patitoParser.OR, i);
		}
		public MexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mexp; }
	}

	public final MexpContext mexp() throws RecognitionException {
		MexpContext _localctx = new MexpContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mexp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			sexp();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(146);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AND:
					{
					setState(142);
					((MexpContext)_localctx).AND = match(AND);
					interpreter.addOperator((((MexpContext)_localctx).AND!=null?((MexpContext)_localctx).AND.getText():null))
					}
					break;
				case OR:
					{
					setState(144);
					((MexpContext)_localctx).OR = match(OR);
					interpreter.addOperator((((MexpContext)_localctx).OR!=null?((MexpContext)_localctx).OR.getText():null))
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(148);
				sexp();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
